--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.31.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "icons-react": "^3.7.1",
     "lucide-react": "^0.469.0",
+    "motion": "^12.6.2",
     "next": "15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
